# aureon-agent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  agent_runtime.py  context_builder.py  invoice_pilot.py  lessons.py  live_test_github.py  live_test_gmail.py  live_test_gmail_download.py  live_test_invoice_cron.py  main.py  memory.py  plan_node.py  pyproject.toml  requirements-invoice.txt  requirements.txt  session_manager.py  skill_loader.py  workflow
aureon_agent/: __main__.py  cli.py  config.py  cron.py  cron_cli.py  cron_db.py  cron_schedule.py  doctor.py  mcp_client.py  models.py  pidlock.py  postinstall.py  repl.py  setup.py  status.py  tool_registry.py  tui.py
aureon_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
channels/: base.py  discord.py  router.py  telegram.py
compaction/: counter.py  log.py  summarizer.py  threshold.py
docs/: cron.md  mcp.md  setup-script.md  tools.md
mcp-patches/: README.md  apply.sh  gmail-api.js.patch  server.js.patch
scripts/: generate_banner.py  seed-invoice-cron.sh
systemd/: aureon-agent.service  aureon-invoice.service  aureon-invoice.timer
tasks/: DEVLOG.md  aureon-agent gmail mcp.md  aureon-agent invoice autodownloader.md  aureon-agent invoice demo guide.md  aureon-agent metal model.md  kickoff-aureon-agent.md  kickoff-cron-scheduler.md  kickoff-inline-confirm.md  kickoff-invoice-pilot.md  kickoff-phase8-context.md  kickoff-plan-node-hard-block.md  kickoff-rich-status-cmd.md  kickoff-session-cmd-telegram-slashes.md  kickoff-session-compaction.md  kickoff-tui-polish.md  (+10 more)
(+69 files in other folders)
